syntax = "proto3";

package qiuwanli;

////////////////////////////////////////////////////////////
//服务端
message File2Cilent
{
	string FileName=1;	//文件名
	string FileSHA512=2;	//唯一标识SHA512
	string CilentID=3;	//客户端ID
}
message File2ClientTable
{
	repeated File2Cilent FileToClient=1;
}

//文件存储端的信息
message ClientConfigFile
{
	string CilentID=1;	//
	string SaveIP=2;	//客户端对应IP
	string PriKey=3;	//认证信息
	string KeyMD5=4;	//用于验证
	uint64 TotleSize=5;
	uint64 RemainSize=6;
}
message ClientConfigFileTable
{
	repeated ClientConfigFile ClientInfo=1;
}

//服务端文件信息保存列表
message FileInfoList
{
	string FileSHA512=1;
	string FileMD5=2;
	string FileName=3;
	string FileCreateDate=4;
	string FileChangeDate=5;
	uint64 FileAllBlock=6;
	uint64 FileTotalSize=7;
	string Tag=8;
}
message FileInfoListTable
{
	repeated FileInfoList FileList=1;
}

//服务端文件块的对应存储列表
message BlockList4Down
{
	string FileSHA512=1;
	string BlockNumer=2;
	string SaveServersIP=3;
}
message BlockList4DownTable
{
	repeated BlockList4Down BlockListForDown=1;
}

//用于保存用户信息
message UserInfo
{
	string UserID=1;
	string UserPS=2;
}
message UserInfoTable
{
	repeated UserInfo User=1;
}

//分享列表
message Shared
{
	string SharedUrl=1;
	string FileSHA512=2;
	string VerificationCode=3;
	string UserID=4;
}
message SharedTable
{
	repeated Shared SharedInfo=1;
}


////////////////////////////////////////////////////////
//文件存储端
//配置信息
message ConfigFile
{
	uint64 ID=1;
	uint64 IP=2;
	string PriKey=3;
	string PriKeyMD5=4;
	uint64 TotalSize=5;
	uint64 RemainSize=6;
}

//块列表
message BlockInfo
{
	string FileSHA512=1;		//文件名包含后缀
	string BlockMD5=2;			//
	string SaveFileName=3; 		//保存在哪个文件中
	uint64 BlockNumer=4;		//
	uint64 CurSize=5;			//实际大小这表示为整块64K
	uint64 FileBlockOffset=6;	//文件存储位置的相对偏移量
}
message BlockInfoTable
{
	repeated BlockInfo Block=1;
}

//用于记录用户操作的，可进行操作回退，系统日志
message Logs 
{
	string user_id=1;
	uint64 log_date=2;
	string log_info=3;
	bytes  log_type=4;
	string user_client_UUID=5;	
}
//用于记录个人日志，每月保存为一个文件
message LogTable
{
	string logdate=1;
	repeated Logs log=2;
}


/////////////////////////////////////////
///第三方
//保存文件传输完成的验证信息
message FileList4Down
{
	string FileSHA512=1;
	string FileMD5=2;
}
message FileList4DownTable
{
	repeated FileList4Down FileListForDown=1;
}

//正在下载的文件
message FileDowningLog
{
	string filename=1;
	string filesize=2;
	string downtime=3;
	string Downingstatus=4;
	string filesha512=5;
}
message FileDowningLogTable
{
	repeated FileDowningLog FileDownLog=1;
}

//保存文件所对应的文件块的下载列表
message BlockListForDown
{
	string FileSHA512=1;
	string BlockNumer=2;
	string SaveServersIP=3;
}
message BlockListForDownTable
{
	repeated BlockListForDown BlockListForDown=1;
}

//正在下载的文件信息
message FileDowning
{
	string FileSHA512 = 1;
	string FileMD5 =2;
	string FileName=3;
	string FileDownTime=4;
	uint64 FileDownloadBlockCount=5;
	uint64 FileTotalBlockCount=6;
	string FileSize=7;
	uint32 BlockCount=8;
	string BitMap=9;
}
message FileDowningTable
{
	repeated FileDowning FileContinueTransmit=1;
}